[project]
name = "a2a-agent"
version = "0.1.0"
dependencies = [
	"fastapi",
	"uvicorn",
	"websockets",
	"msgpack",
	"numpy",
	"pydantic",
	"requests"
]

[tool.setuptools]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
